[workspace]
members = [
    "xtask",
    "common/stdio",
    "common/mem",
    "common/executor",
    "common/collections",
    "libs/thread",
    "libs/time",
    "libs/net",
    "libs/var_bitmap",
    "platforms/guest",
    "platforms/qemu-virt",
    "platforms/qemu-virt-ld",
    "platforms/qemu-sifive_u",
    "platforms/qemu-sifive_u-ld",
    "apps/helloworld",
    "apps/async_echo",
    "apps/echo",
    "apps/server",
    "apps/client",
    "apps/benchmark",
    "obj",
]
default-members = ["xtask"]

[profile.release]
opt-level = 0
debug = true
