[workspace]
members = [
    "xtask",
    "common/stdio",
    "common/mem",
    "common/executor",
    "common/collections",
    "libs/thread",
    "common/timer",
    "libs/net",
    "libs/var_bitmap",
    "platforms/guest",
    "platforms/qemu-virt",
    "platforms/qemu-virt-ld",
    "platforms/qemu-sifive_u",
    "platforms/qemu-sifive_u-ld",
    "apps/helloworld",
    "apps/echo",
    "apps/server",
    "apps/client",
    "apps/benchmark",
    "obj",
]
default-members = ["xtask"]

[profile.release]
opt-level = 0
debug = true
