[workspace]
members = [
    "xtask",
    "common/stdio",
    "common/mem",
    "common/executor",
    "common/collections",
    "common/timer",
    "libs/thread",
    "libs/net",
    "libs/var_bitmap",
    "platforms/guest",
    "platforms/qemu-virt",
    "platforms/qemu-virt-ld",
    "platforms/qemu-sifive_u",
    "platforms/qemu-sifive_u-ld",
    "apps/helloworld",
    "apps/async_echo",
    "apps/echo",
    "apps/server",
    "apps/benchmark",
    "obj",
]
default-members = ["xtask"]

[profile.release]
opt-level = 0
debug = true
