[package]
name = "async_echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
executor = {path = "../../common/executor"}
thread = {path = "../../libs/thread"}
stdio = {path = "../../common/stdio"}
mpmc = {path = "../../common/mpmc"}
spin = "0.9.4"
