[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
executor = {path = "../../common/executor"}
timer = {path = "../../common/timer"}
mem = { path = "../../common/mem" }
net = { path = "../../libs/net" }
thread = {path = "../../libs/thread"}
stdio = { path = "../../common/stdio" }
