[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { version = "0.8.1", default-features = false, features = [
    "alloc",
    "socket-tcp",
    "socket-dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
    "log", "verbose"] }
spin = "0.9.4"
mem = { path = "../mem/"}
stdio = { path = "../stdio/"}
var_bitmap = { path = "../var_bitmap/"}
