[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { version = "0.8.1", default-features = false, features = [
    "alloc",
    "async",
    "socket-tcp",
    "socket-dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
    "log", "verbose"] }
spin = "0.9.4"
stdio = { path = "../../common/stdio/"}
var_bitmap = { path = "../var_bitmap/"}
